Tests/Runtime2/Error/Call/.build/catcherror.pr
[
  {
    "name": "CatchError",
    "description": "Set %caughtMessage% to the caught error message (from %!error.Message%).",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "set %caughtMessage% = %!error.Message%",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "variable",
            "action": "set",
            "parameters": [
              {
                "name": "Name",
                "value": "%caughtMessage%",
                "type": "string"
              },
              {
                "name": "Value",
                "value": "%!error.Message%",
                "type": "string"
              },
              {
                "name": "Type",
                "value": "string",
                "type": "string"
              }
            ],
            "return": null,
            "defaults": [
              {
                "name": "asdefault",
                "value": false,
                "type": "bool"
              }
            ]
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "goals": [],
    "visibility": 1,
    "path": "/CatchError.goal",
    "prPath": "/.build/catcherror.pr",
    "hash": "e0c6c59c2f69f86595162877a2a5796ede74af5a3074201db9a8dd56c0c7fa4d",
    "builderVersion": "0.3",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]